--- a/resources/views/account/register.edge
+++ b/resources/views/account/register.edge
@@ -16,6 +16,8 @@
     <div class="cardContainer">
         <div class="card p-4 bg-light">
             <form method="POST" action="register">
+              {{ csrfField() }}
+              
               <h2> New Registration form</h2>
               <hr>
 
