--- a/resources/views/complaint/create.edge
+++ b/resources/views/complaint/create.edge
@@ -11,6 +11,7 @@
     <div class="cardContainer">
         <div class="card p-4 bg-light">
             <form action="/complaint" method="post" enctype='multipart/form-data'>
+              {{ csrfField() }}
               <h2>Send us your thoughts</h2>
               <hr>
 
