--- a/resources/views/complaint/edit.edge
+++ b/resources/views/complaint/edit.edge
@@ -17,6 +17,8 @@
                         }
                       })
                     }}" enctype='multipart/form-data'>
+              
+              {{ csrfField() }}
               <h2>Edit or delete your complaints</h2>
               <hr>
 
